fix mobile bottom spacing

--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -174,7 +174,7 @@
 
   .dashboard .share {
     position: relative;
-    bottom: 120px;
+    bottom: auto;
     width: calc(100% - 40px);
   }
 }
